# ai-voice-translater

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PLAN.md
scripts/: start_gui_qwen.ps1
src/aivoice/: api.py  backends.py  cli.py  config.py  dubbing.py  job_queue.py  logging_config.py  media.py  models.py  pipeline.py  quality.py  storage.py  subtitles.py  timing.py
src/aivoice/alignment/: __init__.py  base.py  noop.py  whisperx.py
src/aivoice/asr/: __init__.py  base.py  faster_whisper_adapter.py  mock.py  whisperx_adapter.py
src/aivoice/separation/: __init__.py  base.py  demucs.py  noop.py
src/aivoice/translation/: __init__.py  base.py  glossary.py  llm_adapter.py  mock.py  nllb_adapter.py  postprocess.py  qwen_adapter.py
src/aivoice/tts/: __init__.py  base.py  mock.py  openai_speech.py  sapi.py
src/aivoice/vad/: __init__.py  base.py  noop.py  silero.py
src/aivoice/web/: app.js  index.html  styles.css
tests/: test_alignment.py  test_api.py  test_glossary.py  test_golden_subtitles.py  test_llm_translator.py  test_openai_speech_tts.py  test_pipeline.py  test_quality.py  test_qwen_translator.py  test_real_smoke_optional.py  test_separation.py  test_subtitles.py  test_timing.py  test_translation_postprocess.py
tests/golden/: mock_source.srt  mock_zh.srt
