[project]
name = "ai-voice-translater"
version = "0.1.0"
description = "Local video transcription, translation, subtitles, and dubbing pipeline."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "imageio-ffmpeg>=0.5.1",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.1.0",
]
translate = [
  "sentencepiece>=0.2.0",
  "torch>=2.4.0",
  "transformers>=4.45.0",
]
dev = [
  "pytest>=8.0.0",
]
ml = [
  "faster-whisper>=1.1.0",
  "sentencepiece>=0.2.0",
  "whisperx>=3.3.0",
  "transformers>=4.45.0",
  "torch>=2.4.0",
]

[project.scripts]
aivt = "aivoice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aivoice"]
